# Speech-Separation-Cocktail-Party-Problem

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: conv_tasnet.yaml  dprnn.yaml
demo/: app.py
notebooks/: speech_separation_demo.ipynb
scripts/: compare_methods.py  evaluate.py  train.py
src/speech_separation/: __init__.py
src/speech_separation/data/: __init__.py
src/speech_separation/eval/: __init__.py
src/speech_separation/losses/: __init__.py
src/speech_separation/metrics/: __init__.py
src/speech_separation/models/: __init__.py
src/speech_separation/train/: __init__.py
src/speech_separation/utils/: __init__.py
tests/: test_speech_separation.py
